# rustc_codegen_c

./: Cargo.toml  LICENSE-MIT  README.md  test.sh  y
.github/workflows/: ci.yaml  release.yaml
src/: allocator.rs  builder.rs  builtins.rs  c_ast.rs  consts.rs  context.rs  debuginfo.rs  intrinsic.rs  lib.rs  module.rs  native_stubs.rs  type_of.rs  types.rs  values.rs  write.rs
src/c/: aligned_alloc.c  int128_division.c  native_stubs.c  preamble.c  rust_try.c  unwind_raise_exception.c
